compiler/weave_syntax/tests/data/syntax/namespace/ns0006.error
error: Expected '{'
        --> <source>:1:13
         |
       1 | namespace X ;
         |             ^
error: Expected '}'
        --> <source>:2:1
         |
       2 | 
         | ^
